--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         rel="stylesheet">
     <!-- font udahan -->
 
-     <!-- aos coy -->
-     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!-- aos coy -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
 
 
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-
+   
     <nav class="navbar">
         <div class="logo">
             <img src="asset/F-logo.png" alt="">
@@ -33,42 +33,74 @@
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#about">About Me</a></li>
+            <li><a href="#education">Education</a></li>
             <li><a href="">Project</a></li>
-            <li><a href="">Experience</a></li>
         </ul>
         <button type="text"> Contact me</button>
     </nav>
-    <div class="kotak" id="kotak">.</div>
+    <!-- <div class="kotak" id="kotak">.</div> -->
+
+    <div class="video-background">
+        <video autoplay muted loop id="bg-video">
+          <source src="asset/background/galaxy.mp4" type="video/mp4" />
+        </video>
+    </div>
+
     <section>
+        <img src="asset/background/earth.png" alt="" class="earth" id="earth" data-aos="fade-right"
+            data-aos-duration="1500">
         <div class="home">
+
             <div class="kiri-home">
-                <h1 data-aos="fade-right" data-aos-duration="1700">
-                    I'am Fachri Surya Winata Fatahe
+                <h1 data-aos="fade-right" data-aos-duration="1500" style="margin-left: 105px;">
+                    I'am Fachri
                 </h1>
-                <p data-aos="fade-right" data-aos-duration="1900">Moto saya BELAJAR BEKERJA MEMBANGUN yaitu Belajar untuk bekerja dan membangun masa depan yang indah</p>
+                <h1 data-aos="fade-right" data-aos-duration="1700" style="margin-left: 175px;">
+                    Surya Winata
+                </h1>
+                <h1 data-aos="fade-right" data-aos-duration="1900" style="margin-left: 230px;">
+                    Fatahe
+                </h1>
+                <!-- <p data-aos="fade-down" data-aos-duration="1500">Moto saya BELAJAR BEKERJA MEMBANGUN yaitu Belajar
+                    untuk bekerja dan membangun masa depan yang indah</p>
+                <button data-aos="fade" data-aos-duration="1500">
+                    Explore More!
+                </button> -->
             </div>
+
 
             <div class="kanan-home">
                 <div class="belakang">
-                    <img src="asset/home/javascript.png" alt="" width="200px" id="javascript" data-aos="fade-up" data-aos-duration="1500">
-                    <img src="asset/home/php.png" alt="" width="190px" height="120px" style="margin-top: 50px;"
-                        id="php" data-aos="fade-up" data-aos-duration="1700">
+                    <img src="asset/home/javascript.png" alt="" width="200px" id="javascript" data-aos="fade-up"
+                        data-aos-duration="1500">
+                    <img src="asset/home/php.png" alt="" width="190px" height="120px" style="margin-top: 50px;" id="php"
+                        data-aos="fade-up" data-aos-duration="1700">
                 </div>
-                <a href=""><img src="asset/home/pahri.png" alt="" class="orang" data-aos="fade-up" data-aos-duration="1800"></a>
+                <a href=""><img src="asset/home/pahri.png" alt="" class="orang" data-aos="fade-up"
+                        data-aos-duration="1800"></a>
                 <div class="depan">
-                    <img src="asset/home/html.png" alt="" height="120px" id="html" data-aos="fade-up" data-aos-duration="1900">
-                    <img src="asset/home/css.png" alt="" width="100px" height="120px" id="css" data-aos="fade-up" data-aos-duration="2100">
+                    <img src="asset/home/html.png" alt="" height="120px" id="html" data-aos="fade-up"
+                        data-aos-duration="1900">
+                    <img src="asset/home/css.png" alt="" width="100px" height="120px" id="css" data-aos="fade-up"
+                        data-aos-duration="2100">
                 </div>
             </div>
         </div>
 
         <div class="about" id="about">
-            <img src="asset/home/pc.png" alt="">
+            <img src="asset/background/moon.png" alt="" id="moon" class="moon">
             <div class="isi-about">
-                <h1>
-                    About me
-                </h1>
-                <p>
+                <div >
+                    <h1 data-aos="slide-right" data-aos-duration="2000">
+                        ABOUT
+
+                    </h1>
+                    <h1 data-aos="slide-right" data-aos-duration="2100">
+                        ME
+
+                    </h1>
+                </div>
+                <p id="isiabout" data-aos="slide-left" data-aos-duration="2100">
                     Saya Fachri Surya WInata Fatahe. Saya adalah seorang siswa SMK Negeri 26 Jakarta yang memiliki
                     kemampuan
                     dan ketertarikan dengan Programming, Web design, dan Menggambar. Saya adalah oran yang kompeten
@@ -76,12 +108,105 @@
                     mandiri. Saya juga memiliki kemampuan public speaking yang baik dan berani berbicara orang
                     banyak dengan spontan.
                 </p>
+
+
             </div>
         </div>
-        
+
+        <div class="sekolah" id="education">
+            <h1> EDUCATION</h1>
+
+            <div class="sd">
+                <div class="isi-sd">
+                    <h2 data-aos="fade-down" data-aos-duration="1500">Sekolah Dasar</h2>
+                    <p data-aos="fade-down" data-aos-duration="1800">Saya memulai pendidikan dasar di SDN CBU 09 Pagi
+                        pada tahun 2014, di mana saya belajar berbagai
+                        pelajaran dan keterampilan sosial. Pengalaman ini menjadi fondasi penting bagi perkembangan
+                        sosial dan akademik saya.</p>
+                    <div class="eskul" id="eskul">
+                        <div class="isi-eskul" data-aos="zoom-in-up" data-aos-duration="1500">
+                            <h3 id="silat">0%</h3>
+                            <h5>Silat</h5>
+                        </div>
+                        <div class="isi-eskul" data-aos="zoom-in-up" data-aos-duration="1700">
+                            <h3 id="futsal">0%</h3>
+                            <h5>Futsal</h5>
+                        </div>
+                        <div class="isi-eskul" data-aos="zoom-in-up" data-aos-duration="1900">
+                            <h3 id="marawis">0%</h3>
+                            <h5>Marawis</h5>
+                        </div>
+                        <div class="isi-eskul" data-aos="zoom-in-up" data-aos-duration="2100">
+                            <h3 id="pmr">0%</h3>
+                            <h5>PMR</h5>
+                        </div>
+                        <div class="isi-eskul" data-aos="zoom-in-up" data-aos-duration="2300">
+                            <h3 id="pramuka">0%</h3>
+                            <h5>Pramuka</h5>
+                        </div>
+                    </div>
+                </div>
+                <img src="asset/sekolah/sd.png" alt="" id="sd" data-aos="fade-right" data-aos-duration="1700"
+                    style="    box-shadow: -15px 15px 30px 0px rgba(128, 128, 128, 0.233);">
+            </div>
+            <div class="sd" style="text-align: right;">
+                <img src="asset/sekolah/smp.png" alt="" id="smp" data-aos="fade-left" data-aos-duration="1700">
+                <div class="isi-smp">
+                    <h2 data-aos="fade-down" data-aos-duration="1500">Sekolah Menengah Pertama</h2>
+                    <p data-aos="fade-down" data-aos-duration="1800">Saya mulai SMP di SMPN 243 Jakarta tahun 2020 dan
+                        aktif di basket, rohis, serta OSIS, yang mengembangkan disiplin, kerja sama, kepemimpinan, dan
+                        pemahaman spiritual saya.</p>
+                    <div class="eskul" id="eskul">
+                        <div class="isi-eskul" data-aos="zoom-in-up" data-aos-duration="1500">
+                            <h3 id="basket">0%</h3>
+                            <h5>Basket</h5>
+                        </div>
+                        <div class="isi-eskul" data-aos="zoom-in-up" data-aos-duration="1700">
+                            <h3 id="osis">0%</h3>
+                            <h5>OSIS</h5>
+                        </div>
+                        <div class="isi-eskul" data-aos="zoom-in-up" data-aos-duration="1900">
+                            <h3 id="rohis">0%</h3>
+                            <h5>Rohis</h5>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+            <div class="sd">
+                <div class="isi-sd">
+                    <h2 data-aos="fade-down" data-aos-duration="1500">Sekolah Menengah Kejuruan</h2>
+                    <p data-aos="fade-down" data-aos-duration="1800">Saya, Fachri Surya Winata Fatahe, memulai
+                        perjalanan pendidikan di Sekolah Menengah Kejuruan (SMK) pada tahun 2023 di SMK Negeri 26
+                        Jakarta, mengambil jurusan Teknik Komputer dan Informatika. Pilihan ini sejalan dengan minat dan
+                        passion saya dalam dunia teknologi, khususnya di bidang pemrograman, desain web, dan jaringan
+                        komputer.</p>
+                    <div class="eskul" id="eskul">
+                        <div class="isi-eskul" data-aos="zoom-in-up" data-aos-duration="1500">
+                            <h3 id="basket2">0%</h3>
+                            <h5>Basket</h5>
+                        </div>
+                        <div class="isi-eskul" data-aos="zoom-in-up" data-aos-duration="1700">
+                            <h3 id="osis2">0%</h3>
+                            <h5>OSIS</h5>
+                        </div>
+                        <div class="isi-eskul" data-aos="zoom-in-up" data-aos-duration="1900">
+                            <h3 id="itc">0%</h3>
+                            <h5>ITC(IT Club)</h5>
+                        </div>
+
+                    </div>
+                </div>
+                <img src="asset/sekolah/smk.png" alt="" id="sd" data-aos="fade-right" data-aos-duration="1700">
+            </div>
+
+
+        </div>
+
         <div class="project">
+            <h1>project</h1>
             <div class="project1">
-                
+
             </div>
             <div class="project1">
 
@@ -95,15 +220,15 @@
 
     <!-- parallax coy -->
     <script src="parallax.js"></script>
-    <!-- bouncing coy -->
-     <script src="bounch.js"></script>
+    <!-- persen coy -->
+    <script src="persen.js"></script>
 
-     <!-- aos coy -->
-     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-     <script>
+    <!-- aos coy -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
         AOS.init();
-      </script>
+    </script>
 </body>
-]
+
 
 </html>
